[gd_scene load_steps=6 format=3 uid="uid://l6v8qta4v7i0"]

[ext_resource type="Script" path="res://entities/cards/Card.gd" id="1_uw3th"]
[ext_resource type="Texture2D" uid="uid://ivhgb4nqx1fa" path="res://icon.svg" id="2_4hrwb"]

[sub_resource type="Gradient" id="Gradient_riw6n"]
interpolation_mode = 2
colors = PackedColorArray(0.7, 0.548333, 0.35, 1, 0.27, 0.21384, 0.1404, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_my1h0"]
gradient = SubResource("Gradient_riw6n")
width = 200
height = 300
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2a8vh"]
size = Vector2(224, 320)

[node name="Card" type="Sprite2D" groups=["Cards"]]
texture = SubResource("GradientTexture2D_my1h0")
script = ExtResource("1_uw3th")

[node name="CardName" type="RichTextLabel" parent="." groups=["Cards"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = -100.0
offset_bottom = -405.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
bbcode_enabled = true
text = "[center]CardName[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="." groups=["Cards"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = 1.0
offset_right = -108.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 0.815686, 0, 1)
bbcode_enabled = true
text = "[center]CardDescription
CardDescription
CardDescription
[/center]"
fit_content = true
scroll_active = false

[node name="CardCost" type="RichTextLabel" parent="." groups=["Cards"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = 102.0
offset_right = -218.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.247059, 0.596078, 1, 1)
theme_override_colors/font_outline_color = Color(0.643137, 0.827451, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]000
[/center]"

[node name="CardPower" type="RichTextLabel" parent="." groups=["Cards"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 102.0
offset_right = -114.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 0, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(0.498039, 0, 0.14902, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]000
[/center]"

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Cards"]]
position = Vector2(0, -64)
scale = Vector2(0.999996, 0.999996)
texture = ExtResource("2_4hrwb")

[node name="Area2D" type="Area2D" parent="." groups=["Cards"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Cards"]]
z_index = 4
shape = SubResource("RectangleShape2D_2a8vh")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
